fix: Fix image credit spacing

--- a/style.css
+++ b/style.css
@@ -79,14 +79,14 @@ form {
 }
 .row {
     display: flex;
+    flex-wrap: wrap;
     gap: 2rem;
 }
 .field {
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    flex: 1;
     gap: 0.3rem;
+    flex: 1;
 }
 input {
     width: 100%;
@@ -140,8 +140,8 @@ a {
 /* Credit part */
 .image-credit {
     position: absolute;
-    bottom: 1vh;
-    left: 1vh;
+    bottom: 0.6rem;
+    left: 0.6rem;
 
     font-size: 0.7rem;
     color: red;
